--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,10 +1,4 @@
 @use 'variables'
-$accent-color: #1EACC7
-$primary-color: #202020
-$secondary-color: #fff
-$tertiary-color: #FF5656
-$bg-color: #212121
-$space-v: 16px
 
 =btn($bg, $color)
   font-size: 11px
@@ -24,47 +18,26 @@ $space-v: 16px
 =text($color)
   color: $color
 
-=checklist($title-color, $check-icon)
-  .main-fourth
-    &__cheklist-title
-      color: $title-color
-      font-weight: 400
-    &__cheklist
-      list-style: none
-      display: flex
-      flex-direction: column
-      gap: 0.5rem
-    &__cheklist-item
-      position: relative
-      padding-left: 35px
-      font-weight: 300
-      font-size: 17px
-      line-height: 1.5
-      text-align: left
-      &::before
-        content: ""
-        position: absolute
-        left: 0
-        top: 50%
-        transform: translateY(-50%)
-        width: 21px
-        height: 20px
-        background: url($check-icon) no-repeat center / contain
-      @media (max-width: 992px)
-        font-size: 14px
-    &__cheklist-text
-      color: $title-color
-      text-align: left
-      padding-left: 35px
-      font-size: 17px
-      @media (max-width: 992px)
-        font-size: 14px
+=listname($color)
+  color: $color
+  font-weight: 400
+
+=checklist($icon-path)
+  list-style-image: url(#{$icon-path})
+  margin: 0
+
+%text-default
+  font-family: $font-family-body
+  font-size: $font-size-body
+
+@function color-hover($color)
+  @return darken($color, 10%)
 
 
 body
-  font-family: "Roboto", sans-serif
-  font-size: 15px
-  color: #202020
+  font-family: $font-family-body
+  font-size: $font-size-body
+  color: $primary-color
 
 h1
   font-size: 48px
@@ -89,7 +62,7 @@ h4
   margin-bottom: 20px
 
 p
-  font-size: 15px
+  @extend %text-default
 
 .btn-gradient
   background: linear-gradient(to bottom, #4CE2FF, #1EACC7)
@@ -100,7 +73,6 @@ p
   background-position: center
   background-repeat: no-repeat
   width: 100%
-  height: 851px
 
 .header-top
   background-color: #212121
@@ -125,14 +97,9 @@ p
 
 .header-middle
   background: rgba(0, 0, 0, .5)
-  &__bg
-    color: #fff
-    height: 100vh
   &__contacts
     padding: 1em 0
     color: #fff
-  &__contacts-group
-
   &__contacts-text
     font-weight: 300
     font-size: 12px
@@ -150,9 +117,12 @@ p
     color: #fff
     @media (max-width: 768px)
       padding: 10px 26px
+    &:hover
+    background-color: color-hover(#1EACC7)
+
 .header-bottom
   &__description
-    height: 550px
+    height: 34em
     color: #fff
     @media (max-width: 992px)
       text-align: center
@@ -192,9 +162,10 @@ p
     +text($secondary-color)
 
 .main-first
+  background-color: #fff
   &__benefit-card
     border: none
-    min-height: 245px
+    min-height: 350px
   &__icon
     display: block
     border-radius: 50%
@@ -207,14 +178,12 @@ p
 
 .main-second
   border: 1px solid rgba(30, 172, 199, 0.15)
-  background-color: #fff
   background-image: url('../img/mobile_bg.png')
   background-size: cover
   background-position: center
   background-repeat: no-repeat
   &__item-card
     border-radius: 0
-    margin-bottom: 18px
   &__img-btn
     width: 100%
     height: 100%
@@ -229,84 +198,48 @@ p
   border-radius: 50%
 
 .main-third
-  border-bottom: 1px solid rgba(30, 172, 199, 0.15)
-  position: relative
-  height: 900px
-  display: flex
-  align-items: center
-  justify-content: center
-  overflow: hidden
-  &::before
-    content: ""
-    position: absolute
-    top: 0
-    width: 100vw
-    height: 60%
-    background-color: #000
-    z-index: 1
-  &::after
-    content: ""
-    position: absolute
-    bottom: 0
-    width: 100vw
-    height: 40%
-    background-image: url('../img/mobile_bg.png')
-    background-size: cover
-    background-position: center
-    background-repeat: no-repeat
-    z-index: 1
-  &__promo
-    position: relative
-    z-index: 2
-    top: -5em
-  &__car
-    position: relative
-    z-index: 2
-    height: 30em
-    width: 46em
-    top: 0
-    left: 50%
-    margin-left: -23em
-    @media (max-width: 768px)
-      height: 15em
-      width: 24em
-      margin-left: -12em
+  background: linear-gradient(#070716 60%, transparent 60%), url('../img/mobile_bg.png') no-repeat center bottom / cover
+  @media (max-width: 768px)
+    background: #070716
+    height: auto
   &__description-car
     font-size: 17px
-    font-weight: 300
-    color: $primary-color
-  &__block-text
+    color: #222222
+    @media (max-width: 768px)
+      color: $secondary-color
+  &__subtitle-car
+    @media (max-width: 768px)
+      display: none
+  &__text-car
     @media (max-width: 768px)
       display: none
 
-  @media (max-width: 768px)
-    height: 100vh
-    &::before
-      height: 100%
-    &::after
-      display: none
-    &__car
-      position: relative
-      z-index: 2
-    &__description-car
-      color: $secondary-color
-
 .main-fourth
-  &__cheklist-info
-    margin-bottom: 60px
-    @media (max-width: 992px)
-      margin-bottom: 40px
-  &__cheklist-info_blue
-    +checklist($accent-color, '../icons/check-blue.png')
-  &__cheklist-info_red
-    +checklist($tertiary-color, '../icons/check-red.png')
+  &__listname_blue
+    +listname($accent-color)
+  &__listname_red
+    +listname($tertiary-color)
+  &__cheklist_blue
+    +checklist('../icons/check-blue.png')
+  &__cheklist_red
+    +checklist('../icons/check-red.png')
+  &__cheklist-item
+    padding-left: 0.5em
+    font-weight: 300
+    font-size: 17px
+    margin-bottom: 8px
+    line-height: 1.5
+    vertical-align: middle 
 
 .main-fifth
   background-image: url('../img/world_bg.png')
   background-size: cover
   background-position: center
   background-repeat: no-repeat
-  height: 716px
+  &__block
+    min-height: 720px
+    @media (max-width: 768px)
+      min-height: 360px
   &__link-transperent
     font-size: 15px
     text-transform: uppercase
@@ -316,10 +249,42 @@ p
     &:hover
       text-decoration: underline
 
-.footer
-  &__networks-icon
-    width: 16px
-    height: 16px
-    border-radius: 50%
-    background-color: $bg-color
-    
+.footer-section
+  &__link-nav
+    text-transform: uppercase
+    color: $prim-link-color
+    font-size: $font-size-body
+    font-weight: 500
+  &__link-info
+    text-transform: uppercase
+    color: $link-color
+    font-size: 11px
+  &__socials
+    position: absolute
+    left: 24px
+    top: 50%
+    transform: translateY(-50%)
+    @media (max-width: 768px)
+      position: static
+      display: flex
+      justify-content: center
+      margin-bottom: 24px
+  &__icon
+    width: 35px
+    height: 35px
+  &__sponsors
+    position: absolute
+    right: 24px
+    top: 50%
+    transform: translateY(-50%)
+    @media (max-width: 1200px)
+      weight: 247px
+    @media (max-width: 768px)
+      position: static
+      display: flex
+      justify-content: center
+      margin-bottom: 30px
+  &__lang
+    font-size: 11px
+    color: $accent-color
+    text-transform: uppercase
