--- a/src/sass/variables.sass
+++ b/src/sass/variables.sass
@@ -1,10 +1,16 @@
+$font-family-body: "Roboto", sans-serif
+$font-size-body: 15px
+$bg-color: #212121
+$space-v: 16px
+$basis-font-size: calc(.6em + .6vw)
+
+//Используемые цвета
 $accent-color: #1EACC7
 $primary-color: #202020
 $secondary-color: #fff
 $tertiary-color: #FF5656
-$bg-color: #212121
 $prim-link-color: #070716
 $link-color: #999999
-$space-v: 16px
-$font-family-body: "Roboto", sans-serif
-$font-size-body: 15px
+
+
+
